@@ -28,7 +28,7 @@
 .\"
 .\"     groff -man -Tascii gxemul.1    or    nroff -man gxemul.1
 .\"
-.Dd MARCH 2008
+.Dd APRIL 2008
 .Dt GXEMUL 1
 .Os
 .Sh NAME
@@ -41,14 +41,16 @@
 .Nm
 .Op general options
 .Op machine selection options
-.Op binary...
+binary
+.Op ...
 .Nm gxemul-gui
 .Op general options
 .Op configfile
 .Nm gxemul-gui
 .Op general options
 .Op machine selection options
-.Op binary...
+binary
+.Op ...
 .Sh DESCRIPTION
 GXemul is a framework for full-system computer architecture emulation.
 .Sh USAGE
